# cassie_description

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_libraries.m  model.config  package.xml
MATLAB/: Cassie_v4.m
MATLAB/+CustomContact/: CassieFootCustom.m
MATLAB/simulink/: evaluate_dynamics.cpp  evaluate_dynamics.mexw64  evaluate_holonomics.cpp  evaluate_holonomics.mexw64  run_mex.m  test_mex.slx
MATLAB/simulink/src/: Be_cassie_v4.cpp  Be_cassie_v4.hpp  Ce_cassie_v4.hpp  De_cassie_v4.cpp  De_cassie_v4.hpp  F_spring_cassie_v4.cpp  F_spring_cassie_v4.hpp  Ge_cassie_v4.cpp  Ge_cassie_v4.hpp  J_achilles_constraint.cpp  J_achilles_constraint.hpp  J_leftSole_constraint.cpp  J_leftSole_constraint.hpp  J_left_fixed_constraint.cpp  J_left_fixed_constraint.hpp  J_rightSole_constraint.cpp  J_rightSole_constraint.hpp  J_right_fixed_constraint.cpp  J_right_fixed_constraint.hpp  Jdot_achilles_constraint.cpp  Jdot_achilles_constraint.hpp  Jdot_leftSole_constraint.cpp  Jdot_leftSole_constraint.hpp  Jdot_left_fixed_constraint.cpp  Jdot_left_fixed_constraint.hpp  Jdot_rightSole_constraint.cpp  Jdot_rightSole_constraint.hpp  Jdot_right_fixed_constraint.cpp  Jdot_right_fixed_constraint.hpp
MATLAB/src/: CassieStateEnum.m
MATLAB/symbolic/: convertFile.m  export_fun.m  frostConv.py
MATLAB/symbolic/Template/: template_export.cc  template_export.hh
MATLAB/symbolic/common/: Arctan.m
cassie/: cassie.sdf  cassie_empty.world  model.config
include/cassie_description/: CassieStateEnum.hpp  cassie_model.hpp
launch/: cassie_gui.launch  cassie_no_controllers.launch
rviz/: cassie_gui.rviz
src/: cassie_model.cpp
urdf/: cassie.sdf  cassie_v4.urdf
